@@ -1,3 +1,8 @@
+2006-01-04  Prakash Punnoor <prakash@punnoor.de>
+
+	* CMakeLists.txt: sync to configure.ac regarding back-ends and
+	fix missing compilation of objects in dlopen case
+
 2006-01-04  Sven Panne  <sven.panne@aedion.de>
 
 	* src/backends/alc_backend.h: Fixed comment.
